--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
+    "aws-sdk": "^2.1373.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
