--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.328.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.12.3",
-    "aws-sdk": "^2.1373.0",
     "axios": "^1.4.0",
     "next": "13.4.1",
     "react": "18.2.0",
